Use current_user admin checks in templates

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,3 +1,4 @@
+<!-- LINKED: Replaced 'role' variable with user property checks (current_user.is_admin / is_superadmin) -->
 <!-- Base template providing the overall structure for Elite Discounts pages. -->
 <!DOCTYPE html>
 <html lang="en">
@@ -30,9 +31,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="mainNavbar">
-                    {% set role = current_user.normalized_role if current_user else None %}
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        {% if role in ['admin', 'superadmin'] %}
+                        {% if current_user and (current_user.is_admin or current_user.is_superadmin) %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('admin.dashboard_users') }}">Users</a>
                             </li>
@@ -43,7 +43,7 @@
                                 <a class="nav-link" href="{{ url_for('admin.dashboard_offers') }}">Offers</a>
                             </li>
                         {% endif %}
-                        {% if role in ['company', 'superadmin'] %}
+                        {% if current_user and (current_user.has_role('company') or current_user.is_superadmin) %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('company_portal_bp.dashboard') }}">Company Portal</a>
                             </li>
